--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,14 +3,14 @@
 @use 'globals/variables';
 @use 'globals/mixins.scss' as *;
 
-/// NAVBAR ///
+/// NAVBAR SECTION ///
 
 .nav-container{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.7rem 4rem 0 4rem;
-    margin-bottom: 3.5rem;
+    padding: 1.7rem 6rem 0 6rem;
+    margin-bottom: 3rem;
 
     .logo{
         width: 50px;
@@ -20,3 +20,75 @@
         @include btn;
     }
 }
+
+                            /// MAIN SECTION ///
+/// FIRST SECTION ///
+
+.first-section{
+    margin-bottom: 2rem;
+
+    .first-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        grid-auto-flow: row;
+        grid-template-areas:
+          "text-area img-area";
+        padding: 0 6rem;
+        position: relative;
+        overflow: hidden;
+    
+        .text-area{
+        justify-self: start;
+        align-self: center;
+        grid-area: text-area;
+        }
+    
+        h1{
+            font-size: 3.1rem;
+            color: variables.$heading-color;
+            text-transform: uppercase;
+            margin-bottom: 1rem;
+        }
+    
+        .improve{
+            color: variables.$text-color;
+            font-weight: 500;
+            width: 400px;
+            margin-bottom: 2.5rem;
+        }
+    
+        .btn-2{
+            @include btn-2;
+            margin-right: 1.5rem;
+        }
+    
+        .release{
+            color: variables.$text-color;
+            font-weight: 700;
+            text-transform: uppercase;
+        }
+        
+        .img-area{
+            grid-area: img-area;
+        }
+    
+        .img-keyboard{
+            width: 100%;
+            height: auto;
+            border-radius: 1rem;
+        }
+    
+        .square{
+            width: 200px;
+            position: absolute;
+            z-index: -2;
+            right: -125px;
+        }
+    }
+}
+
+
+  
+  
+  
