--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -91,7 +91,7 @@
 /// SECOND SECTION ///
 
 .second-section{
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
 
     .second-container{
         display: grid;
@@ -156,6 +156,53 @@
             z-index: -2;
             left: -110px;
             bottom: 0;
+        }
+    }
+}
+
+/// THIRD SECTION ///
+
+.third-section{
+    margin-bottom: 6rem;
+    .third-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 30px;
+        padding: 0 7rem;
+        height: auto;
+
+        .col{
+            align-self: flex-start;
+        }
+
+        .compatible, .bluetooth, .battery, .light{
+            width: 100px;
+        }
+
+        .bg-img{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            background-color: variables.$btn-orange;
+            padding: 1rem;
+            border-radius: .700rem;
+            margin-bottom: 2.5rem;
+        }
+
+        h3{
+            text-transform: uppercase;
+            color: variables.$heading-color;
+            font-size: 1.8rem;
+            margin-bottom: 1rem;
+        }
+
+        .para{
+            font-weight: 500;
+            color: variables.$text-color;
         }
     }
 }
