--- a/scss/globals/mixins.scss
+++ b/scss/globals/mixins.scss
@@ -35,3 +35,15 @@
         background-color: #FF9B62;
     }
 }
+
+@mixin tablet-view{
+    @media (min-width: 768px) and (max-width: 900px){
+        @content
+    }
+}
+
+@mixin mobile-view{
+    @media only screen and (max-width: 767px){
+        @content;
+    }
+}
