--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -164,6 +164,14 @@
             mix-blend-mode: multiply;
             opacity: 0.7486005425453186;
         }
+
+        .hover-img-2{
+            display: none;
+        }
+
+        .img-key-2{
+            display: none;
+        }
     
         .second-img{
             grid-area: second-img;
@@ -203,6 +211,62 @@
             z-index: -2;
             left: -110px;
             bottom: 0;
+        }
+    }
+}
+
+@include tablet-view{
+    .second-section{
+        .second-container{
+            grid-template-columns: 0.7fr 1.3fr;
+            grid-template-rows: 0.6fr 0.6fr;
+            grid-template-areas:
+                "first-img second-img"
+                "text-zone text-zone";
+            padding: 0 2rem;
+
+            .square-2{
+                display: none;
+            }
+
+            .hover-img{
+                display: none;
+            }
+
+            .img-key{
+                display: none;
+            }
+
+            .hover-img-2{
+                display: block;
+                width: 100%;
+                object-fit: cover;
+                mix-blend-mode: multiply;
+                opacity: 0.7486005425453186;
+            }
+
+            .img-key-2{
+                display: block;
+                width: 100%;
+            }
+
+            .text-zone{
+                font-size: 1.1rem;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                gap: 0px 80px;
+                padding: 0;
+                margin-top: 4rem;
+            }
+
+            .typemaster{
+                padding-left: 1rem;
+            }
+
+            h2{
+                font-size: 2rem;
+            }
         }
     }
 }
