--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -31,6 +31,18 @@
     }
 }
 
+@include mobile-view{
+    .nav-container{
+        padding: 1.5rem 1rem 0 1rem;
+        margin-bottom: 0;
+
+        .logo{
+            width: 55px;
+            padding-top: .400rem;
+        }
+    }
+}
+
                             /// MAIN SECTION ///
 /// FIRST SECTION ///
 
@@ -134,6 +146,36 @@
                 border-radius: 1rem;
                 position: relative;
                 right: -110px;
+            }
+        }
+    }
+}
+
+@include mobile-view{
+    .first-section{
+        .first-container{
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr;
+            grid-template-areas:
+                "text-area"
+                "img-area";
+            padding: 0 1rem;
+
+            .improve{
+                width: 100%;
+            }
+
+            .square, .img-keyboard, .img-keyboard-2{
+                display: none;
+            }
+
+            .img-keyboard-3{
+                display: block;
+                margin-top: 1.2rem;
+                width: 100%;
+                border-radius: 1rem;
+                position: relative;
+                right: -1rem;
             }
         }
     }
