--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -438,6 +438,27 @@
     }
 }
 
+@include mobile-view{
+    .third-section{
+        margin-bottom: 2rem;
+
+        .third-container{
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 0.9fr 1fr 1fr 1fr;
+            gap: 50px;
+            text-align: center;
+            padding: 0 1rem;
+
+            .bg-img{
+                width: 60px;
+                height: 60px;
+                margin: 0 auto 2.5rem auto;
+            }
+        }
+    }
+}
+
                             /// FOOTER SECTION ///
 
 
