Adding final updates

--- a/scss/globals/mixins.scss
+++ b/scss/globals/mixins.scss
@@ -1,11 +1,11 @@
 @use 'variables';
 
 @mixin btn{
-    padding: .800rem 1.5rem;
+    padding: 1rem 1.5rem;
     border-radius: 0.5rem;
     background-color: variables.$btn-bg-color;
     color: variables.$heading-color;
-    font-size: .880rem;
+    font-size: .980rem;
     font-weight: 700;
     text-transform: uppercase;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
@@ -20,11 +20,11 @@
 }
 
 @mixin btn-2{
-    padding: .800rem 1.5rem;
+    padding: 1rem 1.5rem;
     border-radius: 0.5rem;
     background-color: variables.$btn-orange;
     color: white;
-    font-size: .880rem;
+    font-size: .980rem;
     font-weight: 700;
     text-transform: uppercase;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
