--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -464,7 +464,7 @@
 
 .footer-section{
     .text-footer{
-        padding: 2.2rem 0;
+        padding: 2.2rem 0 1rem 0;
         color: variables.$text-color;
         text-align: center;
     }
